# musicDL

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  __main__.py  lang_codes.json  mypy.ini  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
docs/: cli_options.rst  conf.py  index.rst  installation.rst  musicDL.rst  musicDL.services.rst  usage.rst
musicDL/: SongObj.py  __init__.py  __main__.py  cli.py  config.py  constants.py  downloader.py  exceptions.py  handle_requests.py  log.py  main.py  metadata.py  progress_handlers.py  saavn.py  utils.py
musicDL/services/: __init__.py  ffmpeg.py  lyrics.py  saavn.py  sync_lyrics.py
tests/: __init__.py  test_cli.py  test_config.py  test_log.py  test_saavn.py  test_utils.py
tests/test-config/: invalid-config.json  invalid-config.yaml  valid-config.json  valid-config.yaml
